--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "kevinjang",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "tedious": "^5.0.3"
   }
 }
